--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
 
   </head>
   <body>
-
-    <div class="hidden-sm hidden-xs">
       <!-- Navbar górny -->
       <div class="container-fluid">
         <div class="navbar navbar-default navbar-fixed-top" id="menu">
@@ -46,16 +44,17 @@
 
         </nav>
       </div>
-    </div>
 
     <div style="margin-top: 100px; width: 100vw; padding: 0; background-color: #ffffff"   id="top">
-      <img src="./src/firstimg.jpg" style="width: 100%; height: 100%;"> </img>
+      <img src="./src/firstimg.jpg"  class="firstImg"> </img>
+      <!-- <div style="position: absolute; top:300px; left: 300px;"><h3>Bottom Left</h3></div> -->
     </div>
     <div style="height: 100vh; background-color: #9f2067ff" id="uslugi">     </div>
     <div style="height: 100vh; background-color: #1b75bcff" id="zdjecia">    </div>
     <div style="height: 100vh; background-color: #f15a29ff" id="rezerwacja"> </div>
     <div style="height: 100vh; background-color: #ffde17ff" id="kontakt">    </div>
-
+    <!-- ładowanie -->
+    <div class="modal"></div>
 
 
 
