--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="snowstorm-min.js"> </script>
     <script src="index.js"> </script>
-    <script src=".\node_modules\vivus\dist\vivus.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vivus/0.4.3/vivus.min.js"></script>
   </head>
   <body class="loading">
       <!-- Menu dla dużych i średnich wyświetlaczy -->
