sidebar changes, adding text to website

--- a/index.html
+++ b/index.html
@@ -120,42 +120,66 @@
 
     <!-- Usługi -->
     <div style="height: 100vh; background-color: #ffe44dff" id="uslugi">
-        <div style="height: 33.3vh; line-height: 33.3vh; padding-left: 15px; background-color: #ffe44dff" id="dzieci">
+        <div style="height: 33.3vh; line-height: 33.3vh; padding: 15px 15px 15px 15px; background-color: #ffe44dff" id="dzieci">
           <span> <h3> DLA DZIECI </h3> </span>
-          <div class="avoidSidebar" id="tresc">
-            <h4> Urodziny to bardzo wyjątkowa sprawa dla każdego młodego człowieka, dlatego w tej sprawie jesteśmy otwarci na potrzeby dzieci.
-            </h4>
+          <div style="line-height: 150%;" id="tresc">
+            <h3 style="margin-top: 0;"> </br> Urodziny to bardzo wyjątkowa sprawa dla każdego młodego człowieka, dlatego w tej sprawie jesteśmy otwarci na potrzeby dzieci.
+            </h3>
             <!-- Tematy urodzin -->
             <div class="row-fluid">
               <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
-                <h4> Indiańska wioska </h4>
+                <h4 style="font-weight: bold;"> Indiańska wioska </h4>
                 Indiańskie podchody </br>
                 Zdobywanie pióropuszy </br>
                 Legendy plemienne
               </div>
               <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
-                <h4> SurvivaLOVE </h4>
+                <h4 style="font-weight: bold;"> SurvivaLOVE </h4>
                 Balonowa bitwa </br>
                 Budowanie szałasu </br>
                 Zabawy z kompasem i mapą
               </div>
               <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
-                <h4> Chemia od kuchnii </h4>
+                <h4 style="font-weight: bold;"> Chemia od kuchnii </h4>
                 Doświadczenia z produktami używanymi w kuchni </br>
                 Pokaz substancji chemicznych </br>
                 Zabawa z ciekawostkami o świecie fizyki i przyrody
               </div>
               <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                <h4 style="font-weight: bold;"> Palcem po mapie </h4>
+                Czy da się zwiedzić cały świat w dwie godziny! Oczywiście :D </br>
+                Zabawy z najdalszych zakamarków świata </br>
+                Tworzenie ogromnej mapy
               </div>
               <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                <h4 style="font-weight: bold;"> Damy i rycerze </h4>
+                Zabawa w iście królewskim stylu: </br>
+                Tańce średniowieczne </br>
+                Tworzenie królewskiej biżuterii </br>
+                Zawody rycerskie
               </div>
               <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                <h4 style="font-weight: bold;"> Sweet sixteen </h4>
+                Najbardziej różowo-mięciutkie przyjęcie w tej części kraju </br>
+                Przebieranki - pokaz mody </br>
+                Quizy i zadania </br>
+                Kolorowe warkoczyki
               </div>
               <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                <h4 style="font-weight: bold;"> Cyrk na kółkach </h4>
+                Warsztaty modelowania balonów </br>
+                Zabawy żonglerskie
               </div>
               <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                <h4 style="font-weight: bold;"> Piracka przygoda </h4>
+                Poszukiwanie zaginionego skarbu </br>
+                Tworzenie ogromnego statku pirackiego </br>
+                Pirackie przyśpiewki
               </div>
               <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                <h4 style="font-weight: bold;"> Bajkowa kraina </h4>
+                Niesamowita podróż po świecie bajek </br>
+                w towarzystwie swoich ulubionych postaci
               </div>
             </div>
           </div>
