--- a/index.html
+++ b/index.html
@@ -193,6 +193,15 @@
                   <li>warsztaty modelowania balonów</li>
                 </ul>
               </p>
+              <p>
+                To jeszcze za mało? Możemy więcej!
+                <ul>
+                  <li>malowanie twarzy według życzenia gości (dodatkowy animator: 80 zł)</li>
+                  <li>dekoracja miejsca na przyjęcie - ustalane indywidualnie</li>
+                  <li>piniata wypełniona słodkościami - 40 zł</li>
+                  <li>opieka dodatkowego animatora: 120 zł/całość</li>
+                </ul>
+              </p>
             </div>
           </div>
         </div>
